@@ -238,6 +238,15 @@ void mpd_connection_free(struct mpd_connection *connection)
 	free(connection);
 }
 
+void
+mpd_connection_set_keepalive(struct mpd_connection *connection,
+                             bool keepalive)
+{
+	assert(connection != NULL);
+
+	mpd_async_set_keepalive(connection->async, keepalive);
+}
+
 const struct mpd_settings *
 mpd_connection_get_settings(const struct mpd_connection *connection)
 {
