@@ -1,6 +1,7 @@
 libmpdclient 2.10 (not yet released)
 * support abstract sockets with "@" prefix
 * support tag "MUSICBRAINZ_RELEASETRACKID"
+* add TCP keepalive internal and external APIs
 
 libmpdclient 2.9 (2013/10/29)
 * directory: support attribute "Last-Modified"
